Slider loop implemented + fixed Header, Cart page, Catalog page sort, Added Empty cart page & success order page

--- a/src/components/DropdownList/DropdownList.scss
+++ b/src/components/DropdownList/DropdownList.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: variables.$dropdown-width;
+  min-width: variables.$dropdown-width;
 
   &__button {
     display: flex;
