--- a/src/components/pages/CatalogPage/CatalogPage.scss
+++ b/src/components/pages/CatalogPage/CatalogPage.scss
@@ -3,12 +3,14 @@
 
 
 .catalog-page {
+
   &__filters {
     display: flex
   }
+
   &__category {
     @include mixins.container;
-  
+    margin-top: variables.$gap;
     display: grid;
     column-gap: variables.$small-gap;
     row-gap: variables.$small-gap;
