--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -90,4 +90,9 @@ $crumb-size: 1rem;
 $buttons-width: 5rem;
 $buttons-height: 2rem;
 
+// BORDERS
+
+$border: 1px solid $secondary-color;
+$shadow:  0 2px 16px 0 #0000001a;
+
 
