--- a/src/components/pages/ProductPage/Gallery/Gallery.scss
+++ b/src/components/pages/ProductPage/Gallery/Gallery.scss
@@ -47,14 +47,14 @@
             background-repeat: no-repeat;
             border-radius: variables.$border-radius;
             transform: scale(0.95);
-            @include mixins.border;
+            border: variables.$border;
             @include mixins.smooth-transition(all);
 
             &:hover {
                 cursor: pointer;
                 border-color: variables.$primary-color;
                 transform: scale(1);
-                @include mixins.shadow;
+                box-shadow: variables.$shadow;
             }
 
             &.is-active{
