--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -94,7 +94,7 @@ button {
         &--selected {
           background-color: variables.$bg-color;
           color: variables.$accent-color;
-          @include mixins.border
+          border: variables.$border
         }
 
         &:hover {
@@ -115,10 +115,6 @@ button {
         height: variables.$button-height-small;
         border-radius: 100%;
         border-radius: variables.$button-height-small;
-
-        // &:hover {
-        //   border-color: variables.$primary-color;
-        // }
 
         &:hover .button__icon   {
           color: variables.$primary-color;
@@ -169,6 +165,7 @@ button {
 
 .headline-block {
   margin-bottom: variables.$big-gap;
+  text-transform: capitalize;
 
   &__subtitle {
     color: variables.$secondary-color;
