Ruslan mudryi develop searching product (#30)
* fixed routes

* fixed merge conflict

* created search element

* fixed deploy bug

--- a/src/components/pages/CatalogPage/CatalogPage.scss
+++ b/src/components/pages/CatalogPage/CatalogPage.scss
@@ -1,11 +1,11 @@
 @use './../../../styles/variables.scss' as variables;
 @use './../../../styles/mixins/mixins.scss' as mixins;
 
-
 .catalog-page {
 
   &__filters {
-    display: flex
+    display: flex;
+    gap: variables.$gap;
   }
 
   &__category {
@@ -28,6 +28,11 @@
     @include mixins.on-desktop {
       grid-template-columns: repeat(4, 1fr);
     }
-}
+  }
 }
 
+
+.dropdowns-container{
+    display: flex;
+    gap: 16px;
+}
