--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,12 @@
   width: 100%;
   padding: 2rem 0;
 }
+.footer__logo-img {
+  transition: transform 0.3s ease;
+}
+.footer__logo-img:hover {
+  transform: scale(1.1);
+}
 .footer__container {
   max-width: 90%;
   display: grid;
@@ -19,7 +25,7 @@
 }
 @media (min-width: 1200px) {
   .footer__container {
-    max-width: 1136px;
+    width: 1136px;
   }
 }
 .footer__back-to-top {
