--- a/src/components/OrderItem/OrderItem.css
+++ b/src/components/OrderItem/OrderItem.css
@@ -19,7 +19,7 @@
   font-style: normal;
   font-display: swap;
 }
-.cart-item {
+.order-item {
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -28,70 +28,78 @@
   border-radius: 1rem;
   padding: 1rem;
   justify-content: space-between;
+  margin-bottom: 1rem;
 }
 @media (min-width: 640px) {
-  .cart-item {
+  .order-item {
     flex-direction: row;
     padding: 1.5rem;
   }
 }
-.cart-item__container {
+.order-item__container {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
 }
 @media (min-width: 640px) {
-  .cart-item__container {
+  .order-item__container {
     gap: 1.5rem;
   }
 }
-.cart-item__phone-image {
-  min-width: 5rem;
-  height: 5rem;
+.order-item__success {
   padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 0.5rem;
+  background-color: #e7fff1;
+  color: #27ae60;
 }
-.cart-item__phone-img {
-  height: 100%;
+.order-item__namespase {
+  font-family: "Mont-Bold";
+  font-size: 1.25rem;
 }
-.cart-item__title {
+.order-item__title {
   font-family: "Mont";
   font-size: 0.875rem;
   color: #0f0f11;
 }
 @media (min-width: 640px) {
-  .cart-item__title {
+  .order-item__title {
     margin-right: 1.5rem;
   }
 }
-.cart-item__counter {
-  width: 6rem;
-  height: 2rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.cart-item__count-text {
-  font-size: 0.75rem;
-}
-.cart-item__price {
+.order-item__price {
   font-family: "Mont-Bold";
   font-size: 1.375rem;
   margin-left: 1rem;
 }
-.cart-item__close-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.25rem;
-  cursor: pointer;
+.order-item .dropdown {
+  position: relative;
+  display: inline-block;
 }
-.cart-item__close-button:hover {
-  opacity: 0.7;
+.order-item .dropdown__label {
+  color: #89939a;
+  visibility: hidden;
+}
+.order-item .dropdown__label.visible {
+  visibility: visible;
+}
+.order-item .dropdown__menu {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  border: 1px solid #89939a;
+  padding: 1rem;
+}
+.order-item .dropdown:hover .dropdown__menu {
+  display: block;
+}
+.order-item .dropdown__item-order {
+  color: #89939a;
+  padding: 0.5rem;
+  white-space: nowrap;
 }
 
-/*# sourceMappingURL=CartItem.css.map */
+/*# sourceMappingURL=OrderItem.css.map */
