--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,20 +1,20 @@
 @font-face {
-  font-family: 'Mont';
-  src: url('/fonts/Mont-Regular.otf') format('opentype');
+  font-family: "Mont";
+  src: url("/fonts/Mont-Regular.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Mont-Semi-Bold';
-  src: url('/fonts/Mont-SemiBold.otf') format('opentype');
+  font-family: "Mont-Semi-Bold";
+  src: url("/fonts/Mont-SemiBold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Mont-Bold';
-  src: url('/fonts/Mont-Bold.otf') format('opentype');
+  font-family: "Mont-Bold";
+  src: url("/fonts/Mont-Bold.otf") format("opentype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -27,8 +27,20 @@
   border: 1px solid #e2e6e9;
   border-radius: 0.5rem;
   background-color: #ffffff;
-  transition: all 200ms ease-out;
+  transition: all 0.2s ease-out;
   transform: scale(0.98);
+  position: relative;
+}
+.product-card__specifications-block {
+  position: relative;
+}
+.product-card__specifications-block::before {
+  content: "";
+  position: absolute;
+  top: -0.5rem;
+  width: 100%;
+  height: 1px;
+  background-color: #e2e6e9;
 }
 .product-card:hover {
   transform: scale(1);
@@ -39,80 +51,13 @@
   object-fit: contain;
   margin-bottom: 1rem;
   aspect-ratio: 1/1;
-  transition: transform 200ms ease-out;
+  transition: transform 0.2s ease-out;
 }
 .product-card__image:hover {
   transform: scale(1.05);
 }
 .product-card__title {
   margin-bottom: 0.5rem;
-}
-.product-card__price {
-  position: relative;
-  display: flex;
-  gap: 8px;
-  margin-bottom: 1rem;
-}
-.product-card__price::after {
-  content: '';
-  position: absolute;
-  bottom: -0.5rem;
-  width: 100%;
-  height: 1px;
-  background-color: #e2e6e9;
-}
-.product-card__full-price {
-  position: relative;
-  color: #89939a;
-  font-family: 'Mont';
-}
-.product-card__full-price::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  transform: translateY(-50%);
-  height: 1.8px;
-  background-color: #89939a;
-  mix-blend-mode: color-dodge;
-}
-.product-card__characteristics {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  margin-bottom: 1rem;
-}
-.product-card__characteristic {
-  display: flex;
-  justify-content: space-between;
-}
-.product-card__characteristic-name {
-  color: #89939a;
-}
-.product-card__buttons {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.button-add {
-  flex: 1;
-}
-
-.button-favourite {
-  width: 2.5rem;
-  height: 2.5rem;
-  background: #ffffff url('/icons/Favourites (Heart Like).svg') center/16px
-    no-repeat;
-  transition:
-    background-color 0.3s,
-    border-color 0.3s;
-}
-.button-favourite--selected {
-  background-image: url('/icons/Favourites Filled (Heart Like).svg');
 }
 
 /*# sourceMappingURL=ProductCard.css.map */
