add Rights page

--- a/src/components/pages/ContactsPage/ContactsPage.scss
+++ b/src/components/pages/ContactsPage/ContactsPage.scss
@@ -51,7 +51,8 @@
     margin-bottom: 10px;
   }
 
-  &__github {
+  &__social {
+    display: block;
     font-size: 0.9rem;
     color: #007bff;
     text-decoration: none;
