--- a/src/components/Back/Back.scss
+++ b/src/components/Back/Back.scss
@@ -10,10 +10,10 @@
     align-items: center;
     gap: variables.$tiny-gap;
     font-size: variables.$font-size-text;
-    color: variables.$secondary-color;
+    color: var(--secondary-color);
 
     &:hover {
-      color: variables.$primary-color;
+      color: var(--primary-color);
     }
   }
 }
