--- a/src/components/DropdownList/DropdownList.scss
+++ b/src/components/DropdownList/DropdownList.scss
@@ -17,14 +17,15 @@
 
     font-size: variables.$font-size-text;
 
-    background-color: variables.$bg-color;
-    border: 1px solid variables.$icons-color;
+    background-color: var(--bg-color);
+    border: 1px solid var(--icons-color);
     border-radius: variables.$border-radius;
+    color: var(--primary-color);
 
     cursor: pointer;
 
     &:focus {
-      border: 1px solid variables.$primary-color;
+      border: 1px solid var(--primary-color);
     }
   }
 
@@ -43,9 +44,9 @@
     top: calc(100% + variables.$tiny-gap);
     left: 0;
 
-    border: 1px solid variables.$icons-color;
+    border: 1px solid var(--icons-color);
     border-radius: variables.$border-radius;
-    background-color: variables.$bg-color;
+    background-color: var(--bg-color);
 
     z-index: 10;
   }
@@ -59,13 +60,13 @@
     font-size: variables.$font-size-text;
     line-height: variables.$line-height-text;
 
-    color: variables.$secondary-color;
+    color: var(--secondary-color);
     border-radius: variables.$border-radius;
     cursor: pointer;
 
     &:hover {
-      background-color: variables.$hover-color;
-      color: variables.$primary-color;
+      background-color: var(--hover-color);
+      color: var(--primary-color);
     }
   }
 }
