--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,9 +7,9 @@
   height: variables.$header-size;
   z-index: 9999;
   width: 100%;
-  background-color: variables.$bg-color;
+  background-color: var(--bg-color);
   box-shadow: 0px variables.$tiny-gap variables.$shadow-blur
-    variables.$shadow-color;
+    var(--shadow-color);
 
   &__container {
     height: 100%;
@@ -62,18 +62,27 @@
     position: relative;
     height: 100%;
     width: variables.$header-size;
-    border-left: 1px solid variables.$elements-color;
+    border-left: 1px solid var(--elements-color);
     border-radius: 0;
 
     &:hover {
-      background-color: variables.$primary-color;
-      color: variables.$bg-color;
+      background-color: var(--primary-color);
+      color: var(--bg-color);
 
       .icon__cart {
         background-image: url('/icons/shopping-bag-hover.svg');
+
+        [data-theme = 'dark'] & {
+          background-image: url('/icons/shopping-bag-regular.svg');
+        }
       }
+
       .icon__heart {
         background-image: url('/icons/heart-hover.svg');
+
+        [data-theme = 'dark'] & {
+          background-image: url('/icons/heart-regular.svg');
+        }
       }
     }
 
@@ -87,7 +96,7 @@
   }
 
   .is-active {
-    color: variables.$primary-color;
+    color: var(--primary-color);
 
     &::after {
       content: '';
@@ -96,7 +105,7 @@
       width: 100%;
       height: variables.$border-height;
       bottom: 0;
-      background-color: variables.$primary-color;
+      background-color: var(--primary-color);
       border-radius: variables.$border-radius;
     }
   }
@@ -113,7 +122,7 @@
       width: 14px;
       height: variables.$border-height;
       border-radius: variables.$border-radius;
-      background-color: variables.$primary-color;
+      background-color: var(--primary-color);
 
       &::before {
         content: '';
@@ -123,7 +132,7 @@
         width: 100%;
         height: variables.$border-height;
         border-radius: variables.$border-radius;
-        background-color: variables.$primary-color;
+        background-color: var(--primary-color);
         transition: all 400ms ease;
       }
 
@@ -135,7 +144,7 @@
         width: 100%;
         height: variables.$border-height;
         border-radius: variables.$border-radius;
-        background-color: variables.$primary-color;
+        background-color: var(--primary-color);
         transition: all 400ms ease;
       }
 
@@ -155,7 +164,7 @@
     }
 
     &:hover {
-      background-color: variables.$bg-color;
+      background-color: var(--bg-color);
     }
   }
 }
@@ -164,8 +173,8 @@
   position: absolute;
   top: 20px;
   right: 15px;
-  background-color: variables.$secondary-accent-color;
-  color: variables.$bg-color;
+  background-color: var(--secondary-accent-color);
+  color: var(--bg-color);
   font-size: 9px;
   font-weight: bold;
   padding: 2px 5px;
@@ -184,6 +193,10 @@
   background-size: cover;
   background-position: center;
   background-image: url('/icons/shopping-bag-regular.svg');
+
+  [data-theme = 'dark'] & {
+    background-image: url('/icons/shopping-bag-hover.svg');
+  }
 }
 
 .icon__heart {
@@ -194,4 +207,8 @@
   background-size: cover;
   background-position: center;
   background-image: url('/icons/heart-regular.svg');
+
+  [data-theme = 'dark'] & {
+    background-image: url('/icons/heart-hover.svg');
+  }
 }
