--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,3 +1,5 @@
+@use '../../styles/variables.scss' as variables;
+
 .loader-wrapper {
   width: 100%;
   height: 100vh;
@@ -14,16 +16,16 @@
   font-weight: bold;
   text-transform: uppercase;
   color: #0000;
-  -webkit-text-stroke: 1px #000;
+  -webkit-text-stroke: 1px var(--secondary-color);
   background:
-    radial-gradient(1.13em at 50% 1.6em, #000 99%, #0000 101%) calc(50% - 1.6em)
+    radial-gradient(1.13em at 50% 1.6em, var(--secondary-color)0 99%, #0000 101%) calc(50% - 1.6em)
       0/3.2em 100% text,
-    radial-gradient(1.13em at 50% -0.8em, #0000 99%, #000 101%) 50% 0.8em/3.2em
+    radial-gradient(1.13em at 50% -0.8em, #0000 99%, var(--secondary-color) 101%) 50% 0.8em/3.2em
       100% repeat-x text;
   animation: l9 2s linear infinite;
 }
 .loader:before {
-  content: 'Loading...';
+  content: 'Loading';
 }
 @keyframes l9 {
   to {
