--- a/src/components/PriceBlock/PriceBlock.scss
+++ b/src/components/PriceBlock/PriceBlock.scss
@@ -11,7 +11,7 @@
 
   &__full-price {
     position: relative;
-    color: variables.$secondary-color;
+    color: var(--secondary-color);
     font-family: fonts.$main-font;
 
     &::before {
@@ -23,7 +23,7 @@
       transform: translateY(-50%);
 
       height: 1.8px;
-      background-color: variables.$secondary-color;
+      background-color: var(--secondary-color);
       mix-blend-mode: color-dodge;
     }
   }
