--- a/src/components/pages/CartPage/CartPage.scss
+++ b/src/components/pages/CartPage/CartPage.scss
@@ -32,7 +32,7 @@
     align-items: center;
     flex-direction: column;
     padding: variables.$medium-gap;
-    border: 1px solid variables.$elements-color;
+    border: 1px solid var(--elements-color);
     border-radius: variables.$cart-item-border-radius;
     text-align: center;
 
@@ -47,13 +47,13 @@
 
     .cart-page__total--text {
       font-family: fonts.$main-font;
-      color: variables.$secondary-color;
+      color: var(--secondary-color);
     }
 
     .cart-page__divider {
       width: 100%;
       height: 1px;
-      background-color: variables.$elements-color;
+      background-color: var(--elements-color);
       margin-top: 1rem;
       margin-bottom: 1rem;
 
