--- a/src/components/pages/FavouritesPage/FavouritesPage.scss
+++ b/src/components/pages/FavouritesPage/FavouritesPage.scss
@@ -12,7 +12,7 @@
   gap: 8px;
 
   &__text {
-    color: variables.$secondary-color;
+    color: var(--secondary-color);
     font-family: fonts.$main-font;
     font-size: variables.$font-size-text-small;
     line-height: variables.$line-height-text-small;
@@ -30,7 +30,7 @@
     font-family: fonts.$main-font;
     font-size: variables.$font-size-text;
     line-height: variables.$line-height-text;
-    color: variables.$secondary-color;
+    color: var(--secondary-color);
   }
 }
 
