--- a/src/components/pages/ProductPage/ColorPicker/ColorPicker.scss
+++ b/src/components/pages/ProductPage/ColorPicker/ColorPicker.scss
@@ -7,7 +7,7 @@
       padding: variables.$tiny-gap;
 
       &.is-active {
-        border-color: variables.$primary-color;
+        border-color: var(--primary-color);
       }
     }
 
