--- a/src/components/pages/ProductPage/Gallery/Gallery.scss
+++ b/src/components/pages/ProductPage/Gallery/Gallery.scss
@@ -52,13 +52,13 @@
 
       &:hover {
         cursor: pointer;
-        border-color: variables.$primary-color;
+        border-color: var(--primary-color);
         transform: scale(1);
         box-shadow: variables.$shadow;
       }
 
       &.is-active {
-        border-color: variables.$primary-color;
+        border-color: var(--primary-color);
       }
     }
   }
