--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@ body {
 body {
   font-family: fonts.$main-font, sans-serif;
   line-height: variables.$line-height-text;
+  
 }
 
 ul,
@@ -51,6 +52,12 @@ button {
   flex-direction: column;
 }
 
+.theme-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
 .wrapper {
   position: relative;
   width: 100%;
@@ -59,7 +66,9 @@ button {
   flex-direction: column;
   overflow-x: hidden;
   margin: 0 auto;
-  background-color: variables.$hover-color;
+  background-color: var(--hover-color);
+  padding-bottom: variables.$big-gap;
+  color: var(--primary-color);
 
   &__container {
     padding-top: variables.$big-gap;
@@ -79,34 +88,34 @@ button {
   @include mixins.smooth-transition(all);
 
   &__icon {
-    color: variables.$secondary-color;
+    color: var(--secondary-color);
     @include mixins.smooth-transition(all);
   }
 
   &--primary {
     height: variables.$button-height;
-    color: variables.$bg-color;
+    color: white;
     line-height: variables.$line-height-text;
-    background-color: variables.$accent-color;
+    background-color: var(--accent-color);
     padding: 0 variables.$smaller-gap;
 
     &--selected {
-      background-color: variables.$bg-color;
-      color: variables.$accent-color;
+      background-color: var(--bg-color);
+      color: var(--accent-color);
       border: variables.$border;
     }
 
     &:hover {
-      box-shadow: variables.$shadow-color 0px variables.$tiny-gap
+      box-shadow: var(--shadow-color) 0px variables.$tiny-gap
         variables.$shadow-blur;
     }
   }
 
   &--secondary {
-    border: 1px variables.$icons-color solid;
+    border: 1px var(--icons-color) solid;
 
     &:hover {
-      border-color: variables.$primary-color;
+      border-color: var(--primary-color);
     }
   }
 
@@ -117,7 +126,7 @@ button {
     border-radius: variables.$button-height-small;
 
     &:hover .button__icon {
-      color: variables.$primary-color;
+      color: var(--primary-color);
     }
   }
 
@@ -126,7 +135,7 @@ button {
   }
 
   &--disabled {
-    border-color: variables.$elements-color;
+    border-color: var(--elements-color);
   }
 }
 
@@ -134,7 +143,7 @@ button {
   font-family: fonts.$bold-font, sans-serif;
   text-transform: uppercase;
   font-size: variables.$font-size-text-small;
-  color: variables.$secondary-color;
+  color: var(--secondary-color);
 
   &__list {
     display: flex;
@@ -147,7 +156,7 @@ button {
   }
 
   &__item:hover {
-    color: variables.$primary-color;
+    color: var(--primary-color);
   }
 }
 
@@ -167,8 +176,12 @@ button {
   margin-bottom: variables.$big-gap;
   text-transform: capitalize;
 
+  &__headline {
+    color: var(--primary-color);
+  }
+
   &__subtitle {
-    color: variables.$secondary-color;
+    color: var(--secondary-color);
   }
 }
 
@@ -182,7 +195,7 @@ button {
     position: absolute;
     width: 100%;
     height: 1px;
-    background-color: variables.$elements-color;
+    background-color: var(--elements-color);
     bottom: - variables.$smaller-gap;
   }
 }
@@ -226,13 +239,13 @@ button {
 }
 
 .title {
-  color: variables.$secondary-color;
+  color: var(--secondary-color);
   font-size: variables.$font-size-text-small;
   margin-bottom: variables.$smaller-gap;
 }
 
 .title {
-  color: variables.$secondary-color;
+  color: var(--secondary-color);
   font-size: variables.$font-size-text-small;
   margin-bottom: variables.$smaller-gap;
 }
@@ -262,11 +275,11 @@ button {
       display: block;
       width: variables.$bullet-point-size;
       height: variables.$bullet-point-height;
-      background-color: variables.$elements-color;
+      background-color: var(--elements-color);
       border-radius: variables.$bullet-point-size;
 
       &-active {
-        background-color: variables.$primary-color;
+        background-color: cvar(--primary-color);
       }
     }
   }
