dark theme implemented

--- a/src/components/Header/BurgerMenu/BurgerMenu.scss
+++ b/src/components/Header/BurgerMenu/BurgerMenu.scss
@@ -67,5 +67,7 @@
     height: 64px;
     border: 1px solid var(--elements-color);
     border-radius: 0;
+    color: var(--primary-color);
+    position: relative;
   }
 }
