--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -119,7 +119,7 @@
 
     .icon {
       position: relative;
-      width: 14px;
+      width: variables.$small-gap;
       height: variables.$border-height;
       border-radius: variables.$border-radius;
       background-color: var(--primary-color);
@@ -133,7 +133,7 @@
         height: variables.$border-height;
         border-radius: variables.$border-radius;
         background-color: var(--primary-color);
-        transition: all 400ms ease;
+        @include mixins.smooth-transition(all);
       }
 
       &::after {
@@ -145,7 +145,7 @@
         height: variables.$border-height;
         border-radius: variables.$border-radius;
         background-color: var(--primary-color);
-        transition: all 400ms ease;
+        @include mixins.smooth-transition(all);
       }
 
       &.is-active {
@@ -167,22 +167,6 @@
       background-color: var(--bg-color);
     }
   }
-}
-
-.header__counter {
-  position: absolute;
-  top: 20px;
-  right: 15px;
-  background-color: var(--secondary-accent-color);
-  color: var(--bg-color);
-  font-size: 9px;
-  font-weight: bold;
-  padding: 2px 5px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 14px;
 }
 
 .icon__cart {
