--- a/src/components/pages/ContactsPage/ContactsPage.scss
+++ b/src/components/pages/ContactsPage/ContactsPage.scss
@@ -17,7 +17,7 @@
   }
 
   &__member {
-    background-color: var(--hover-color);
+    background-color: var(--bg-color);
     border-radius: 8px;
     padding: 15px;
     width: 200px;
