--- a/src/components/pages/RightsPage/RightsPage.scss
+++ b/src/components/pages/RightsPage/RightsPage.scss
@@ -1,34 +1,30 @@
+@use '../../../styles/variables.scss' as variables;
+
 .rights-page {
-  padding: 20px;
 
   &__title {
-    font-size: 2rem;
-    margin-bottom: 20px;
+    margin-bottom: variables.$big-gap;
     text-align: center;
   }
 
   &__section {
-    margin-bottom: 20px;
-    padding: 10px;
-    background-color: #f9f9f9;
+    margin-bottom: variables.$gap;
+    padding: variables.$small-gap;
+    background-color: var(--bg-color);
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   &__subtitle {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    color: #333;
+    margin-bottom: variables.$small-gap;
   }
 
   &__text {
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #666;
+    color: var(--secondary-color);
   }
 
   &__link {
-    color: #007bff;
+    color: var(--accent-color);
     text-decoration: none;
 
     &:hover {
