--- a/src/components/pages/ContactsPage/ContactsPage.scss
+++ b/src/components/pages/ContactsPage/ContactsPage.scss
@@ -1,25 +1,25 @@
 @use '../../../styles/variables.scss' as variables;
 
 .team-page {
-  padding: 20px;
+  padding: variables.$gap;
   text-align: center;
 
   &__title {
     font-size: 2rem;
-    margin-bottom: 20px;
+    margin-bottom: variables.$gap;
   }
 
   &__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: variables.$gap;
   }
 
   &__member {
     background-color: var(--bg-color);
-    border-radius: 8px;
-    padding: 15px;
+    border-radius: variables.$border-radius;
+    padding: variables.$small-gap;
     width: 200px;
     box-shadow: variables.$shadow;
     text-align: center;
@@ -37,7 +37,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    margin-bottom: 10px;
+    margin-bottom: variables.$tiny-gap;
   }
 
   &__name {
@@ -50,7 +50,7 @@
   &__role {
     font-size: 1rem;
     color: var(--secondary-color);
-    margin-bottom: 10px;
+    margin-bottom: variables.$tiny-gap;
   }
 
   &__social {
